tests/baselines/reference/structConstructorParameterPropertyDeclarationCannotOverride.errors.txt
tests/cases/conformance/structs/constructorDeclarations/constructorParameters/structConstructorParameterPropertyDeclarationCannotOverride.ts(8,8): error TS8006: Struct 'Derived' incorrectly extends base struct 'Base':
  Derived Struct 'Derived' cannot override base struct 'Base' member variable 'x'.


==== tests/cases/conformance/structs/constructorDeclarations/constructorParameters/structConstructorParameterPropertyDeclarationCannotOverride.ts (1 errors) ====
    // doc 3.1
    // derived struct cannot override inherited member variables from base struct
    
    struct Base {
        constructor(public x: number) { }
    }
    
    struct Derived extends Base {
           ~~~~~~~
!!! error TS8006: Struct 'Derived' incorrectly extends base struct 'Base':
!!! error TS8006:   Derived Struct 'Derived' cannot override base struct 'Base' member variable 'x'.
    	constructor(public x: number) { // cannot overrides inherited member variables
            super(x);
            this.x; // OK
        }
    }
    
    struct Derived1 extends Base {
    	constructor(public y: number) { // ok
    		super(y);
    		this.x; // OK
    		this.y; // OK
    	}
    }
    
    var d: Derived1;
    d.x;  // public, OK